installation/k8s/web-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podchy-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podchy-web
  template:
    metadata:
      labels:
        app: podchy-web
    spec:
      containers:
        - name: podchy-web
          image: localhost:5000/podchy-web:latest
          command: ["nginx", "-g", "daemon off;"]
          ports:
            - containerPort: 80
