installation/k8s/api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podchy-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podchy-api-deployment
  template:
    metadata:
      labels:
        app: podchy-api-deployment
    spec:
      serviceAccountName: podchy-api
      containers:
        - name: podchy-api
          image: reqhiem/podchy-api:latest
          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: django-api-service
  labels:
    app: podchy-api-deployment
spec:
  type: LoadBalancer
  selector:
    app: podchy-api-deployment
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8000
