installation/k8s/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
spec:
  defaultBackend:
    service:
      name: podchy-api-service
      port:
        number: 80
